--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^17.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "next": "15.3.5",
